Testing monorepo multiple instances

--- a/g3/index.mdx
+++ b/g3/index.mdx
@@ -6,6 +6,12 @@ title: 1C1 - Exploration du domaine de l'informatique
   ![Logo](/img/1C1.svg)
 </center> 
 
+:::warning
+
+Ce site est le site pour le groupe 3 (cours du jeudi)
+
+:::
+
 # 1C1 - Exploration du domaine de l'informatique
 
 Bienvenue sur le site du cours 1C1 - Exploration du domaine de l'informatique du [Collège de
