Add g4 and g5, licences and update Readme

--- a/g2/index.mdx
+++ b/g2/index.mdx
@@ -10,8 +10,7 @@ import SharedIndex from '../shared/index.mdx';
 
 :::warning
 
-Ce site est le site pour le groupe 2 (cours du mercredi).<br/>
-Voici le lien pour le [groupe 3](https://archambaultv-prof.github.io/2025A-420-1C1-MA/g3/).
+Ce site est le site pour le groupe 2 (cours du mercredi).
 
 :::
 
