--- a/g3/echeancier/semaine_01.mdx
+++ b/g3/echeancier/semaine_01.mdx
@@ -1,13 +1,20 @@
 ---
 sidebar_position: 1
-sidebar_label: Semaine du 18 août 2025
-description: Plan de leçon de la semaine du 18 août 2025
+sidebar_label: Jeudi 21 août
+description: Plan de leçon du jeudi 21 août 2025
 ---
 
-# Semaine du 18 août 2025
+# Jeudi 21 août 2025
 
-## Jeudi 21 août 2025
+## Au programme
 
-### Au programme
+- Présentation du professeur
+- Introduction au cours
+- Présentation du programme de la technique en informatique
+- Présentation du calendrier et des politiques institutionnelles
 
-- À venir
+:::note
+
+La présentation du professeur est disponible sur Omnivox.
+
+:::
