--- a/g3/evaluations/minitest_1.mdx
+++ b/g3/evaluations/minitest_1.mdx
@@ -6,9 +6,6 @@ description: Mini test 1
 
 # Mini test 1
 
-- **Pondération** : 8%
-- **Semaine du minitest** : Semaine 3
-- **Modalité** : Individuel
+import Shared from '../../shared/evaluations/minitest_1.mdx';
 
-Un minitest est un court questionnaire (environ 5 questions) réalisé en classe,
-sous la supervision du professeur.
+<Shared />
