--- a/g3/echeancier/semaine_03.mdx
+++ b/g3/echeancier/semaine_03.mdx
@@ -13,4 +13,5 @@ description: Plan de leçon du jeudi 4 septembre 2025
 - Installation de VS Code
     - Github Education
 - [Siteweb : HTML et CSS](../notes_de_cours/theme_1/html_css.mdx)
+- Extensions VS Code pour HTML et CSS (ex: Live Preview, Prettier)
 - Exercices : Créer une page web simple
