MAJ mineure semaine 3

--- a/g3/echeancier/semaine_03.mdx
+++ b/g3/echeancier/semaine_03.mdx
@@ -14,4 +14,4 @@ description: Plan de leçon du jeudi 4 septembre 2025
     - Github Education
 - [Siteweb : HTML et CSS](../notes_de_cours/theme_1/html_css.mdx)
 - Extensions VS Code pour HTML et CSS (ex: Live Preview, Prettier)
-- Exercices : Créer une page web simple
+- [Exercice : Créer une page web simple](../notes_de_cours/theme_1/exercices/exo_web_1.mdx)
