--- a/shared/notes_de_cours/theme_1/css.mdx
+++ b/shared/notes_de_cours/theme_1/css.mdx
@@ -45,16 +45,16 @@ selon la propriété.
 
 Nous verrons ici que les sélecteurs de base. 
 
-Le sélecteur d'élément cible toutes les instances d'une balise HTML spécifique.
+*Le sélecteur d'élément* cible toutes les instances d'une balise HTML spécifique.
 Par exemple, `p` sélectionne tous les paragraphes, `h1` tous les titres de
 niveau 1. C'est le sélecteur le plus basique et le plus direct.
 
-Le sélecteur de classe, précédé d'un point (`.ma-classe`), cible tous les
+*Le sélecteur de classe*, précédé d'un point (`.ma-classe`), cible tous les
 éléments ayant l'attribut `class="ma-classe"`. Les classes sont réutilisables
 et constituent l'un des mécanismes les plus puissants pour organiser et
 styliser le contenu.
 
-Le sélecteur d'identifiant, précédé d'un dièse (`#mon-id`), cible l'élément
+*Le sélecteur d'identifiant*, précédé d'un dièse (`#mon-id`), cible l'élément
 unique ayant l'attribut `id="mon-id"`. Les identifiants doivent être uniques
 dans un document et ont une priorité élevée dans la cascade.
 
