--- a/shared/notes_de_cours/theme_1/html.mdx
+++ b/shared/notes_de_cours/theme_1/html.mdx
@@ -19,17 +19,34 @@ d'accessibilité et de support multimédia.
 
 ## Concept de balises et d'éléments
 
-Le HTML fonctionne avec un système de balises qui encapsulent le contenu. Une balise est un marqueur qui indique au navigateur comment interpréter et afficher une portion de texte. La plupart des balises viennent par paires : une balise d'ouverture et une balise de fermeture.
+Le HTML fonctionne avec un système de balises qui encapsulent le contenu. Une
+balise est un marqueur qui indique au navigateur comment interpréter et
+afficher une portion de texte. La plupart des balises viennent par paires : une
+balise d'ouverture et une balise de fermeture.
 
-La syntaxe de base d'une balise est la suivante : `<nom-de-balise>contenu</nom-de-balise>`. La balise d'ouverture commence par `<` et se termine par `>`, tandis que la balise de fermeture est identique mais commence par `</`. Le contenu placé entre ces balises sera affecté par les propriétés de l'élément.
+La syntaxe de base d'une balise est la suivante :
+`<nom-de-balise>contenu</nom-de-balise>`. La balise d'ouverture commence par
+`<` et se termine par `>`, tandis que la balise de fermeture est identique mais
+commence par `</`. Le contenu placé entre ces balises sera affecté par les
+propriétés de l'élément.
 
-Certaines balises sont auto-fermantes et n'ont pas besoin de balise de fermeture. Ces balises, appelées éléments vides, se terminent par `/>` comme `<img />` ou `<br />`. Elles représentent généralement des éléments qui n'ont pas de contenu textuel, comme les images ou les retours à la ligne.
+Certaines balises sont auto-fermantes et n'ont pas besoin de balise de
+fermeture. Ces balises, appelées éléments vides, se terminent par `/>` comme
+`<img />` ou `<br />`. Elles représentent généralement des éléments qui n'ont
+pas de contenu textuel, comme les images ou les retours à la ligne.
 
-Les balises peuvent également contenir des attributs, qui sont des propriétés supplémentaires qui modifient le comportement ou l'apparence de l'élément. Les attributs sont placés dans la balise d'ouverture et suivent la syntaxe `attribut="valeur"`.
+Les balises peuvent également contenir des attributs, qui sont des propriétés
+supplémentaires qui modifient le comportement ou l'apparence de l'élément. Les
+attributs sont placés dans la balise d'ouverture et suivent la syntaxe
+`attribut="valeur"`. Par exemple, dans `<a href="https://example.com">`, `href` est un
+attribut qui spécifie la destination du lien.
 
 ## Structure fondamentale d'un document HTML
 
-Tout document HTML respecte une structure hiérarchique bien définie qui permet aux navigateurs de l'interpréter correctement. Cette structure commence toujours par la déclaration DOCTYPE, qui indique au navigateur quelle version d'HTML utiliser.
+Tout document HTML respecte une structure hiérarchique bien définie qui permet
+aux navigateurs de l'interpréter correctement. Cette structure commence
+toujours par la déclaration DOCTYPE, qui indique au navigateur quelle version
+d'HTML utiliser.
 
 ```html
 <!DOCTYPE html>
@@ -46,33 +63,55 @@ Tout document HTML respecte une structure hiérarchique bien définie qui permet
 </html>
 ```
 
-La déclaration `<!DOCTYPE html>` est obligatoire et doit être la première ligne du document. Elle indique que le document utilise HTML5, la version la plus récente du standard.
+La déclaration `<!DOCTYPE html>` est obligatoire et doit être la première ligne
+du document. Elle indique que le document utilise HTML5, la version la plus
+récente du standard.
 
-L'élément `<html>` est l'élément racine qui contient tout le contenu de la page. L'attribut `lang` spécifie la langue principale du document, ce qui est important pour l'accessibilité et le référencement.
+L'élément `<html>` est l'élément racine qui contient tout le contenu de la
+page. L'attribut `lang` spécifie la langue principale du document, ce qui est
+important pour l'accessibilité et le référencement.
 
 ## Section HEAD : métadonnées et configuration
 
-La section `<head>` contient les métadonnées du document, c'est-à-dire des informations sur la page qui ne sont pas directement visibles par l'utilisateur mais qui sont essentielles pour le navigateur et les moteurs de recherche.
+La section `<head>` contient les métadonnées du document, c'est-à-dire des
+informations sur la page qui ne sont pas directement visibles par l'utilisateur
+mais qui sont essentielles pour le navigateur et les moteurs de recherche.
 
-L'élément `<meta charset="UTF-8">` définit l'encodage des caractères du document. UTF-8 est l'encodage standard qui supporte tous les caractères Unicode, permettant d'afficher correctement les accents, les caractères spéciaux et les alphabets non-latins.
+L'élément `<meta charset="UTF-8">` définit l'encodage des caractères du
+document. UTF-8 est l'encodage standard qui supporte tous les caractères
+Unicode, permettant d'afficher correctement les accents, les caractères
+spéciaux et les alphabets non-latins.
 
-La balise `<meta name="viewport">` est cruciale pour le design responsive. Elle contrôle comment la page est affichée sur les appareils mobiles en définissant les paramètres de la zone d'affichage.
+La balise `<meta name="viewport">` est cruciale pour le design responsive. Elle
+contrôle comment la page est affichée sur les appareils mobiles en définissant
+les paramètres de la zone d'affichage.
 
-Le titre défini par `<title>` apparaît dans l'onglet du navigateur et est utilisé par les moteurs de recherche comme titre principal dans les résultats de recherche. Il doit être descriptif et unique pour chaque page.
+Le titre défini par `<title>` apparaît dans l'onglet du navigateur et est
+utilisé par les moteurs de recherche comme titre principal dans les résultats
+de recherche. Il doit être descriptif et unique pour chaque page.
 
-D'autres éléments peuvent être inclus dans le head, comme les liens vers les feuilles de style CSS, les scripts JavaScript, les favicons, et diverses métadonnées pour les réseaux sociaux.
+D'autres éléments peuvent être inclus dans le head, comme les liens vers les
+feuilles de style CSS, les scripts JavaScript, les favicons, et diverses
+métadonnées pour les réseaux sociaux.
 
 ## Section BODY : contenu visible
 
-La section `<body>` contient tout le contenu visible de la page web. C'est ici que vous placez le texte, les images, les liens, les formulaires et tous les autres éléments que les utilisateurs verront et avec lesquels ils interagiront.
+La section `<body>` contient tout le contenu visible de la page web. C'est ici
+que vous placez le texte, les images, les liens, les formulaires et tous les
+autres éléments que les utilisateurs verront et avec lesquels ils interagiront.
 
-Le body peut contenir de nombreux types d'éléments organisés de manière hiérarchique. La structure sémantique appropriée est importante non seulement pour l'apparence de la page, mais aussi pour l'accessibilité et le référencement.
+Le body peut contenir de nombreux types d'éléments organisés de manière
+hiérarchique. La structure sémantique appropriée est importante non seulement
+pour l'apparence de la page, mais aussi pour l'accessibilité et le
+référencement.
 
 ## Principales balises HTML
 
 ### Balises de titre et hiérarchie
 
-Les balises de titre vont de `<h1>` à `<h6>` et définissent une hiérarchie de contenu. `<h1>` représente le titre principal de la page, tandis que les autres niveaux créent une structure de sous-titres.
+Les balises de titre vont de `<h1>` à `<h6>` et définissent une hiérarchie de
+contenu. `<h1>` représente le titre principal de la page, tandis que les autres
+niveaux créent une structure de sous-titres.
 
 ```html
 <h1>Titre principal</h1>
@@ -80,22 +119,29 @@ Les balises de titre vont de `<h1>` à `<h6>` et définissent une hiérarchie de
 <h3>Titre de sous-section</h3>
 ```
 
-Cette hiérarchie est cruciale pour l'accessibilité car les lecteurs d'écran l'utilisent pour naviguer dans le contenu. Elle influence également le référencement naturel.
+Cette hiérarchie est cruciale pour l'accessibilité car les lecteurs d'écran
+l'utilisent pour naviguer dans le contenu. Elle influence également le
+référencement naturel.
 
 ### Balises de texte et paragraphes
 
-La balise `<p>` définit un paragraphe de texte. Elle ajoute automatiquement des marges avant et après le contenu pour séparer visuellement les paragraphes.
+La balise `<p>` définit un paragraphe de texte. Elle ajoute automatiquement des
+marges avant et après le contenu pour séparer visuellement les paragraphes.
 
 ```html
 <p>Ceci est un paragraphe de texte normal.</p>
 <p>Ceci est un autre paragraphe.</p>
 ```
 
-Pour le formatage inline, plusieurs balises sont disponibles : `<strong>` pour le texte important (gras), `<em>` pour l'emphase (italique), `<mark>` pour le surlignage, et `<small>` pour le texte de taille réduite.
+Pour le formatage inline, plusieurs balises sont disponibles : `<strong>` pour
+le texte important (gras), `<em>` pour l'emphase (italique), `<mark>` pour le
+surlignage, et `<small>` pour le texte de taille réduite.
 
 ### Balises de liste
 
-HTML propose deux types de listes principales : les listes non ordonnées (`<ul>`) et les listes ordonnées (`<ol>`). Chaque élément de liste est défini par `<li>`.
+HTML propose deux types de listes principales : les listes non ordonnées
+(`<ul>`) et les listes ordonnées (`<ol>`). Chaque élément de liste est défini
+par `<li>`.
 
 ```html
 <ul>
@@ -109,11 +155,13 @@ HTML propose deux types de listes principales : les listes non ordonnées (`<ul>
 </ol>
 ```
 
-Les listes de définition (`<dl>`) permettent de créer des paires terme-définition avec `<dt>` et `<dd>`.
+Les listes de définition (`<dl>`) permettent de créer des paires
+terme-définition avec `<dt>` et `<dd>`.
 
 ### Balises de liens et navigation
 
-La balise `<a>` (anchor) crée des liens hypertextes. L'attribut `href` spécifie la destination du lien.
+La balise `<a>` (anchor) crée des liens hypertextes. L'attribut `href` spécifie
+la destination du lien.
 
 ```html
 <a href="https://example.com">Lien externe</a>
@@ -123,7 +171,8 @@ La balise `<a>` (anchor) crée des liens hypertextes. L'attribut `href` spécifi
 
 ### Balises d'images et médias
 
-La balise `<img>` insère des images. Les attributs `src` (source) et `alt` (texte alternatif) sont essentiels.
+La balise `<img>` insère des images. Les attributs `src` (source) et `alt`
+(texte alternatif) sont essentiels.
 
 ```html
 <img src="image.jpg" alt="Description de l'image">
@@ -145,11 +194,14 @@ HTML5 apporte des balises sémantiques qui donnent du sens à la structure de la
 <footer>Pied de page</footer>
 ```
 
-Ces balises améliorent l'accessibilité et aident les moteurs de recherche à comprendre la structure du contenu.
+Ces balises améliorent l'accessibilité et aident les moteurs de recherche à
+comprendre la structure du contenu.
 
 ### Balises de tableau
 
-Les tableaux sont créés avec `<table>`, structurés avec `<thead>`, `<tbody>`, et `<tfoot>`, et contiennent des rangées (`<tr>`) et des cellules (`<td>` ou `<th>`).
+Les tableaux sont créés avec `<table>`, structurés avec `<thead>`, `<tbody>`,
+et `<tfoot>`, et contiennent des rangées (`<tr>`) et des cellules (`<td>` ou
+`<th>`).
 
 ```html
 <table>
@@ -168,33 +220,27 @@ Les tableaux sont créés avec `<table>`, structurés avec `<thead>`, `<tbody>`,
 </table>
 ```
 
-### Balises de formulaire
-
-Les formulaires utilisent `<form>` comme conteneur et diverses balises pour les champs de saisie :
-
-```html
-<form>
-    <label for="nom">Nom :</label>
-    <input type="text" id="nom" name="nom">
-    
-    <label for="email">Email :</label>
-    <input type="email" id="email" name="email">
-    
-    <button type="submit">Envoyer</button>
-</form>
-```
 
 ## Attributs HTML importants
 
-Les attributs HTML fournissent des informations supplémentaires sur les éléments. Certains attributs sont universels et peuvent être utilisés sur presque tous les éléments, tandis que d'autres sont spécifiques à certaines balises.
+Les attributs HTML fournissent des informations supplémentaires sur les
+éléments. Certains attributs sont universels et peuvent être utilisés sur
+presque tous les éléments, tandis que d'autres sont spécifiques à certaines
+balises.
 
-L'attribut `id` donne un identifiant unique à un élément, permettant de le cibler spécifiquement avec CSS ou JavaScript. L'attribut `class` permet de grouper des éléments sous une même catégorie pour un stylage cohérent.
+L'attribut `id` donne un identifiant unique à un élément, permettant de le
+cibler spécifiquement avec CSS ou JavaScript. L'attribut `class` permet de
+grouper des éléments sous une même catégorie pour un stylage cohérent.
 
-L'attribut `title` fournit une information supplémentaire qui apparaît au survol de l'élément. L'attribut `lang` peut spécifier la langue d'une portion spécifique du document.
+L'attribut `title` fournit une information supplémentaire qui apparaît au
+survol de l'élément. L'attribut `lang` peut spécifier la langue d'une portion
+spécifique du document.
 
 ## Validation et bonnes pratiques
 
-La validation HTML vérifie que votre code respecte les standards définis par le W3C. Un HTML valide garantit une meilleure compatibilité entre navigateurs et une accessibilité optimale.
+La validation HTML vérifie que votre code respecte les standards définis par le
+W3C. Un HTML valide garantit une meilleure compatibilité entre navigateurs et
+une accessibilité optimale.
 
 Quelques bonnes pratiques essentielles :
 - Toujours inclure la déclaration DOCTYPE
@@ -206,8 +252,10 @@ Quelques bonnes pratiques essentielles :
 
 ## Accessibilité et HTML
 
-L'accessibilité web consiste à rendre le contenu utilisable par tous, y compris les personnes avec des handicaps. HTML joue un rôle crucial dans l'accessibilité en fournissant une structure sémantique claire.
+L'accessibilité web consiste à rendre le contenu utilisable par tous, y compris
+les personnes avec des handicaps. HTML joue un rôle crucial dans
+l'accessibilité en fournissant une structure sémantique claire.
 
-L'utilisation correcte des balises de titre, l'ajout d'attributs alt aux images, l'association des labels aux champs de formulaire, et l'utilisation de balises sémantiques appropriées sont autant d'éléments qui améliorent l'accessibilité.
-
-Les lecteurs d'écran et autres technologies d'assistance s'appuient sur la structure HTML pour naviguer et interpréter le contenu. Un HTML bien structuré bénéficie donc à tous les utilisateurs.
+Les lecteurs d'écran et autres technologies d'assistance s'appuient sur la
+structure HTML pour naviguer et interpréter le contenu. Un HTML bien structuré
+bénéficie donc à tous les utilisateurs.
