--- a/g3/echeancier/semaine_01.mdx
+++ b/g3/echeancier/semaine_01.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1
-sidebar_label: Jeudi 21 août
+sidebar_label: Jeudi 21 août 2025
 description: Plan de leçon du jeudi 21 août 2025
 ---
 
