--- a/shared/evaluations/minitest_1.mdx
+++ b/shared/evaluations/minitest_1.mdx
@@ -9,6 +9,12 @@ import MultipleChoiceOption from '@site/src/components/MultipleChoice/MultipleCh
 Le mini test 1 contient environ 5 questions à choix multiples portant sur le
 contenu des semaines 1 et 2.
 
+:::warning
+
+Aucune documentation permise. Vous ne pouvez pas utiliser les notes de cours et le site web durant le mini test.
+
+:::
+
 ## Exemples de questions
 
 <MultipleChoiceTabs>
