--- a/shared/evaluations/projet_1.mdx
+++ b/shared/evaluations/projet_1.mdx
@@ -1,10 +1,70 @@
-- **Pondération** : 12%
-- **Distribution de l'énoncé** : Semaine 4
-- **Remise du projet** : Semaine 6
-- **Modalité** : En équipe d'au plus 3 personnes
 
-:::warning
 
-Plus de détails sur le projet 1 seront fournis en temps voulu.
+## 📜 Énoncé
 
-:::
+### Objectif du travail
+
+Ce projet consiste à développer un site web pour une compagnie de développement
+logiciel imaginaire. Le site devra comporter quatre sections principales : une
+page d'accueil, un portfolio des projets, une présentation de l'équipe et des
+profils individuels pour chaque développeur.
+
+### Constitution des équipes
+
+Constituez un groupe de travail de 2 à 3 étudiants. Après la formation du
+groupe, inscrivez votre équipe sur la plateforme GitHub Classroom via le lien
+transmis sur Omnivox.
+
+### Livrables attendus
+
+- **`index.html`** : Page principale de votre agence fictive avec
+  description des services offerts et mission de l'entreprise.
+- **`realisations.html`** : Galerie des projets réalisés par votre agence,
+  incluant des images pour illustrer chaque application créée.
+- **`equipe.html`** : Présentation globale des membres de l'équipe avec navigation
+  vers leurs profils respectifs.
+- **Pages individuelles** (`prenom.html`) : Profil détaillé de chaque membre
+  comprenant son nom, biographie personnelle (peut être fictive) et
+  une liste de ses qualités en tant que développeur.
+- **`styles.css`** : Feuille de style commune contenant minimalement 3 règles
+  CSS distinctes pour harmoniser l'apparence du site.
+
+### Éléments HTML obligatoires
+
+Chaque page web doit contenir au minimum les éléments suivants :
+
+- `doctype html`
+- `html`
+- `head`
+- `body`
+- `title`
+- `meta charset="..."`
+- `p`
+- `h1`, `h2` et/ou `h3`
+- `img src="..."`
+- `a href="..."`
+
+La qualité visuelle ne constitue pas un critère d'évaluation,
+cependant l'utilisation de CSS est obligatoire pour améliorer la présentation.
+La cohérence graphique entre toutes les pages est exigée.
+
+### Environnement de développement
+
+- **Visual Studio Code** sera l'éditeur principal pour la rédaction du code
+  HTML/CSS.
+- **Git et GitHub** serviront au contrôle de version et à la collaboration :
+  - Un compte GitHub actif est requis.
+  - Chaque membre de l'équipe doit faire au moins 2 commits avec messages descriptifs.
+
+## Modalités de remise
+
+Le dépôt GitHub de votre équipe servira de support d'évaluation pour
+l'enseignant. Assurez-vous de bien valider (commit) votre travail **avant** la
+date limite.
+
+## Grille d'évaluation
+
+Consultez [la grille d'évaluation](pathname:///evaluations/grille_projet1.pdf)
+avant de commencer votre projet pour bien comprendre les critères d'évaluation.
+La note est individuelle, si les commits Git montrent une implication inégale
+des membres de l'équipe, la note peut varier entre les coéquipiers.
