Semaine 4 gr 5. MAJ Projet 1

--- a/shared/evaluations/projet_1.mdx
+++ b/shared/evaluations/projet_1.mdx
@@ -12,8 +12,16 @@ profils individuels pour chaque développeur.
 ### Constitution des équipes
 
 Constituez un groupe de travail de 2 à 3 étudiants. Après la formation du
-groupe, inscrivez votre équipe sur la plateforme GitHub Classroom via le lien
-transmis sur Omnivox.
+groupe, créez un dépôt GitHub pour héberger votre projet. Chaque membre doit
+avoir accès en écriture au dépôt.
+
+:::info
+
+Si votre dépôt est privé, ajoutez l'enseignant comme collaborateur pour qu'il puisse
+évaluer votre travail. Le nom d'utilisateur GitHub de l'enseignant est
+`archambaultv-prof`.
+
+:::
 
 ### Livrables attendus
 
@@ -61,6 +69,9 @@ La cohérence graphique entre toutes les pages est exigée.
 Le dépôt GitHub de votre équipe servira de support d'évaluation pour
 l'enseignant. Assurez-vous de bien valider (commit) votre travail **avant** la
 date limite.
+
+Vous remettez sur Omnivox le lien vers le dépôt GitHub de votre projet dans 
+un fichier texte nommé `lien_depot.txt`.
 
 ## Grille d'évaluation
 
