--- a/shared/evaluations/projet_1.mdx
+++ b/shared/evaluations/projet_1.mdx
@@ -70,8 +70,9 @@ Le dépôt GitHub de votre équipe servira de support d'évaluation pour
 l'enseignant. Assurez-vous de bien valider (commit) votre travail **avant** la
 date limite.
 
-Vous remettez sur Omnivox le lien vers le dépôt GitHub de votre projet dans 
-un fichier texte nommé `lien_depot.txt`.
+Vous remettez sur Omnivox un fichier texte nommé `lien_depot.txt` qui contient :
+- L'URL du dépôt GitHub de votre projet.
+- Le nom complet des membres de l'équipe.
 
 ## Grille d'évaluation
 
