--- a/g4/evaluations/projet_1.mdx
+++ b/g4/evaluations/projet_1.mdx
@@ -6,6 +6,11 @@ description: Projet 1
 
 # Projet 1
 
+- **Pondération** : 12%
+- **Distribution de l'énoncé** : 16 septembre 2025
+- **Remise du projet** : 30 septembre 2025 23h59
+- **Modalité** : En équipe d'au plus 3 personnes
+
 import Shared from '../../shared/evaluations/projet_1.mdx';
 
 <Shared />
