MAJ semaine 4 gr 2

--- a/g2/echeancier/semaine_04.mdx
+++ b/g2/echeancier/semaine_04.mdx
@@ -1,10 +1,10 @@
 ---
 sidebar_position: 4
-sidebar_label: Jeudi 11 septembre 2025
-description: Plan de leçon du jeudi 11 septembre 2025
+sidebar_label: Mercredi 17 septembre 2025
+description: Plan de leçon du mercredi 17 septembre 2025
 ---
 
-# Jeudi 11 septembre 2025
+# Mercredi 17 septembre 2025
 
 ## Au programme
 
