--- a/g3/echeancier/semaine_05.mdx
+++ b/g3/echeancier/semaine_05.mdx
@@ -8,5 +8,5 @@ description: Plan de leçon du jeudi 18 septembre 2025
 
 ## Au programme
 
-- [Git merge](https://archambaultv-prof.github.io/git/git_merge#fusionner-avec-conflit)
+- Git merge
 - [Projet 1](../evaluations/projet_1.mdx)
