MAJ semaine 5 pour examen mi-session

--- a/shared/evaluations/examen_mi_session.mdx
+++ b/shared/evaluations/examen_mi_session.mdx
@@ -1,9 +1,46 @@
+## Modalités
+
 - **Pondération** : 25%
+- **Durée** : 2 heures
+- **Lieu** : En classe, en présentiel
 - **Semaine du mi-session** : Semaine 6
-- **Modalité** : Individuel
+- **Individuel**
+- **Examen papier et crayon**
+- **Aucune documentation permise**
 
-:::warning
+## Type de questions
 
-Plus de détails sur l'examen de mi-session seront fournis en temps voulu.
+- Questions à choix multiples (QCM)
+- Questions de type vrai ou faux
+- Questions à réponse courte
+
+## Contenu
+
+L'examen de mi-session couvrira toutes les notions vues depuis le début du
+cours jusqu'à la fin de la semaine 5, avec un accent particulier sur les sujets des semaines 3 à 5.
+
+**Semaine 1 et 2 :**
+- Savoir décrire les deux voies de sortie du programme (DA et ISR), ainsi que le type d'emploi de chacune.
+- Connaître la notion de passerelle DEB/BAC.
+- Savoir ce qu'est une certification, ses avantages et limites.
+
+**Semaine 3 à 5 :**
+- Comprendre le rôle des langages HTML, CSS et JavaScript dans le développement web.
+- Savoir décrire le langage HTML et les balises vues en classe.
+- Connaître la structure d'un document HTML5.
+- Savoir décrire le langage CSS et les propriétés vues en classe.
+- Connaître les différentes façons d'inclure du CSS dans une page HTML.
+- Comprendre le rôle de Git dans le développement logiciel.
+- Comprendre les concepts de base de Git, y compris les commandes de bases.
+    - Initialiser un dépôt Git
+    - Ajouter des fichiers au suivi
+    - Valider des modifications
+    - Pousser des modifications vers un dépôt distant
+    - Récupérer des modifications depuis un dépôt distant
+
+:::tip
+
+Pour le contenu des semaines 3 à 5, si vous avez bien fait votre projet 1, vous
+êtes prêts pour l'examen de mi-session !
 
 :::
