--- a/g5/echeancier/semaine_05.mdx
+++ b/g5/echeancier/semaine_05.mdx
@@ -10,3 +10,9 @@ description: Plan de leçon du lundi 22 septembre 2025
 
 - Git merge
 - [Projet 1](../evaluations/projet_1.mdx)
+
+:::warning
+
+La semaine, c'est l'examen de [mi-session](../evaluations/examen_mi_session.mdx)
+
+:::
