Fix typo semaine 5

--- a/g5/echeancier/semaine_05.mdx
+++ b/g5/echeancier/semaine_05.mdx
@@ -13,6 +13,6 @@ description: Plan de leçon du lundi 22 septembre 2025
 
 :::warning
 
-La semaine, c'est l'examen de [mi-session](../evaluations/examen_mi_session.mdx)
+La semaine prochaine, c'est l'examen de [mi-session](../evaluations/examen_mi_session.mdx)
 
 :::
