MAJ Examen mi-session

--- a/shared/evaluations/examen_mi_session.mdx
+++ b/shared/evaluations/examen_mi_session.mdx
@@ -5,8 +5,14 @@
 - **Lieu** : En classe, en présentiel
 - **Semaine du mi-session** : Semaine 6
 - **Individuel**
-- **Examen papier et crayon**
+- **Plateforme** : Sur Moodle (classe en ligne) ou Microsoft Forms
 - **Aucune documentation permise**
+
+:::warning
+
+Vous devez connaître vos identifiants de connexion aux ordinateurs du Collège.
+
+:::
 
 ## Type de questions
 
