--- a/shared/evaluations/examen_mi_session.mdx
+++ b/shared/evaluations/examen_mi_session.mdx
@@ -27,7 +27,7 @@ cours jusqu'à la fin de la semaine 5, avec un accent particulier sur les sujets
 
 **Semaine 1 et 2 :**
 - Savoir décrire les deux voies de sortie du programme (DA et ISR), ainsi que le type d'emploi de chacune.
-- Connaître la notion de passerelle DEB/BAC.
+- Connaître la notion de passerelle DEC/BAC.
 - Savoir ce qu'est une certification, ses avantages et limites.
 
 **Semaine 3 à 5 :**
