--- a/shared/evaluations/minitest_2.mdx
+++ b/shared/evaluations/minitest_2.mdx
@@ -2,8 +2,11 @@
 - **Semaine du mini test** : Semaine 9
 - **Modalité** : Individuel
 
+Le mini test 2 contient environ 10 questions à choix multiples portant sur
+HTML, CSS, la conférence de Jihène Rezgui et le cours sur l'intelligence artificielle.
+
 :::warning
 
-Plus de détails sur le minitest 2 seront fournis en temps voulu.
+Aucune documentation permise. Vous ne pouvez pas utiliser les notes de cours et le site web durant le mini test.
 
 :::
