--- a/shared/evaluations/projet_2.mdx
+++ b/shared/evaluations/projet_2.mdx
@@ -3,8 +3,4 @@
 - **Remise du projet** : Semaine 12
 - **Modalité** : En équipe d'au plus 3 personnes
 
-:::warning
-
-Plus de détails sur le projet 2 seront fournis en temps voulu.
-
-:::
+L'énoncé du projet 2 sera distribué via Omnivox.
