--- a/shared/evaluations/examen_final.mdx
+++ b/shared/evaluations/examen_final.mdx
@@ -1,9 +1,9 @@
 - **Pondération** : 25%
-- **Semaine de l'examen final** : Semaine 16
+- **Semaine de l'examen final** : Semaine 15
 - **Modalité** : Individuel
 
-:::warning
+L'examen final sera une épreuve écrite d'une durée de 2 heures portant sur
+l'ensemble du cours. Elle comportera des questions à choix multiples et des
+questions ouvertes.
 
-Plus de détails sur l'examen final seront fournis en temps voulu.
-
-:::
+Un épreuve de révision sera offerte durant la semaine précédant l'examen final.
