--- a/shared/evaluations/minitest_3.mdx
+++ b/shared/evaluations/minitest_3.mdx
@@ -2,8 +2,11 @@
 - **Semaine du mini test** : Semaine 14
 - **Modalité** : Individuel
 
+Le mini test 3 contient environ 10 questions à choix multiples portant sur
+les réseaux, les logiciels libres, la cybersécurité et la conférence du 27 novembre.
+
 :::warning
 
-Plus de détails sur le minitest 3 seront fournis en temps voulu.
+Aucune documentation permise. Vous ne pouvez pas utiliser les notes de cours et le site web durant le mini test.
 
 :::
