MAJ épreuve finale

--- a/shared/evaluations/examen_final.mdx
+++ b/shared/evaluations/examen_final.mdx
@@ -1,9 +1,17 @@
 - **Pondération** : 25%
 - **Semaine de l'examen final** : Semaine 15
-- **Modalité** : Individuel
+- **Individuel**
+- **Sur papier**
+- **Aucune documentation permise**
 
 L'examen final sera une épreuve écrite d'une durée de 2 heures portant sur
 l'ensemble du cours. Elle comportera des questions à choix multiples et des
 questions ouvertes.
 
-Un épreuve de révision sera offerte durant la semaine précédant l'examen final.
+Un épreuve de révision est disponible (voir pratique d'examen final)
+
+:::info
+
+La journée, l'heure et le local est le même que celui de votre cours
+
+:::
