--- a/shared/evaluations/examen_final_pratique.mdx
+++ b/shared/evaluations/examen_final_pratique.mdx
@@ -1,3 +1,10 @@
+:::info
+
+Si vous voulez valider vos réponses, n'hésitez pas à venir me voir
+durant mes disponibilités ou me contacter par MIO
+
+:::
+
 ## 1. Introduction au programme et à la profession
 
 ### Choix multiples
