--- a/g3/echeancier/semaine_13.mdx
+++ b/g3/echeancier/semaine_13.mdx
@@ -9,5 +9,5 @@ description: Plan de leçon du jeudi 4 décembre 2025
 ## Au programme
 
 - [Mini test 3](../evaluations/minitest_3.mdx)
-- Veille techonlogique
-- Révision pour l'examen final
+- [Veille technologique](../notes_de_cours/theme_5/veille_technologique.mdx)
+- [Révision pour l'examen final](../evaluations/examen_final_pratique.mdx)
